--- a/package.json
+++ b/package.json
@@ -1,18 +1,31 @@
 {
-    "name": "gulp_kevin_pwell",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {},
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-        "browser-sync": "^2.27.3",
-        "gulp": "^4.0.2",
-        "gulp-sass": "^5.0.0",
-        "sass": "^1.35.1"
-    },
-    "dependencies": {
-        "bootstrap": "^5.0.2"
-    }
+  "name": "bootstrap5_gulp",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {},
+  "author": "Ankit Maheshwari",
+  "license": "MIT",
+  "devDependencies": {
+    "browser-sync": "^2.27.3",
+    "gulp": "^4.0.2",
+    "gulp-sass": "^5.0.0",
+    "sass": "^1.35.1"
+  },
+  "dependencies": {
+    "bootstrap": "^5.0.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ankitind/bootstrap5_gulp.git"
+  },
+  "keywords": [
+    "bootstrap5",
+    "gulp",
+    "sass"
+  ],
+  "bugs": {
+    "url": "https://github.com/ankitind/bootstrap5_gulp/issues"
+  },
+  "homepage": "https://github.com/ankitind/bootstrap5_gulp#readme",
+  "description": ""
 }
