Added proxy and server configurations to browsersync

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bootstrap5_gulp",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "gulpfile.js",
   "scripts": {},
   "author": "Ankit Maheshwari",
   "license": "MIT",
